[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["gzip"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-rustls", "chrono", "postgres", "uuid"] }
thiserror = "1.0.44"
regex = "1.9.3"
derive_builder = "0.12.0"
serde_yaml = "0.9.25"
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
