[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
# anyhow = "1.0.72"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
futures = { version = "0.3.28", default-features = false }
sqlx = { version = "0.7.1", features = ["runtime-async-std-rustls", "chrono", "postgres", "uuid"] }
sqlx-postgres = "0.7.1"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["sync", "full"] }
tracing = "0.1.37"

[dev-dependencies]
prost-types = "0.11.9"
sqlx_db_test = { version = "0.1.0", path = "../sqlx_database_test" }
tokio = { version = "1.30.0", features = ["full"] }
dotenvy = "0.15.7"
