[package]
name = "sqlx_db_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.31.0", features = ["macros", "rt", "rt-multi-thread"] }
